--- a/train.cfg
+++ b/train.cfg
@@ -1,9 +1,8 @@
-
-# +++ file locations
-NET_CFG = 'cfg/yolov3-mid-416.cfg' # 'cfg/squeezedet.cfg' # network configuration file
-TRAIN_FILE = 'data/train-data-416.pt' # training images/labels directory
-TEST_FILE = 'data/test-data-416.pt' # testing images/labels directory
-NET_NAME = 'yv3m-416-test' # where to save the network after training
+[network-config]
+NET_CFG = cfg/yolov3-mid-416.cfg # 'cfg/squeezedet.cfg' # network configuration file
+TRAIN_FILE = data/train-data-416.pt # training images/labels directory
+TEST_FILE = data/test-data-416.pt # testing images/labels directory
+NET_NAME = yv3m-416-test # where to save the network after training
 # TB_LOGDIR = 'runs/' + NET_NAME # log for tensorboard
 # SAVE_NET = NET_NAME + '.pt' # file to save net to
 
@@ -14,16 +13,6 @@ AUG_CUDA = False # should data be used for data augmentation
 # +++ data preferences
 BATCH_SIZE = 32 # batch size
 MINI_BATCH_SIZE = 32 # mini batch size
-
-# +++ data augmentation prefrences
-DATA_AUG = {
-    'mosaics': 0.25,
-    'mixup': 0.25,
-    'cutmix': 0.25,
-    'cutout': 0.25,
-    'hflip': 0.25,
-    'vflip': 0.25,
-    'rot': 0.25}
   
  # +++ training prefrences
 NUM_EPOCHS = 10 # number of epochs to run for
