--- a/train.cfg
+++ b/train.cfg
@@ -1,10 +1,9 @@
 [network-config]
+# +++ file locations
 NET_CFG = cfg/yolov3-mid-416.cfg # 'cfg/squeezedet.cfg' # network configuration file
 TRAIN_FILE = data/train-data-416.pt # training images/labels directory
 TEST_FILE = data/test-data-416.pt # testing images/labels directory
 NET_NAME = yv3m-416-test # where to save the network after training
-# TB_LOGDIR = 'runs/' + NET_NAME # log for tensorboard
-# SAVE_NET = NET_NAME + '.pt' # file to save net to
 
 # +++ gpu preferences
 CUDA = True # should cuda be used for the network
@@ -22,5 +21,12 @@ WRITE_EVERY = 1 # tensorboard data will be written every ___ epochs
 LEARNING_RATE = 0.001 # learning rate
 WEIGHT_DECAY = 0.001 # learning rate decay
 MOMENTUM = 0.9 # momentum for SGD optimizer
-# NESTEROV = False # nesterov SGD?
 
+# +++ data augmentation prefrences
+DA_MOSAICS = 0.25
+DA_MIXUP = 0.25
+DA_CUTMIX = 0.25
+DA_CUTOUT = 0.25
+DA_HFLIP = 0.25
+DA_VFLIP = 0.25
+DA_ROT = 0.25
