misc fixes to training script and datamanager/ dataloader classes

--- a/train.cfg
+++ b/train.cfg
@@ -1,8 +1,8 @@
 [network-config]
 # +++ file locations
 NET_CFG = cfg/yolov3-mid-416.cfg # 'cfg/squeezedet.cfg' # network configuration file
-TRAIN_FILE = data/train-data-416.pt # training images/labels directory
-TEST_FILE = data/test-data-416.pt # testing images/labels directory
+TRAIN_DATA = premade-batches # data/train-data-416.pt # training images/labels directory
+TEST_FILE = data/test-416.pt # testing images/labels directory
 NET_NAME = yv3m-416-test # where to save the network after training
 
 # +++ gpu preferences
@@ -11,10 +11,10 @@ AUG_CUDA = False # should data be used for data augmentation
 
 # +++ data preferences
 BATCH_SIZE = 32 # batch size
-MINI_BATCH_SIZE = 32 # mini batch size
+MINI_BATCH_SIZE = 16 # mini batch size
   
  # +++ training prefrences
-NUM_EPOCHS = 10 # number of epochs to run for
+NUM_EPOCHS = 50 # number of epochs to run for
 WRITE_EVERY = 1 # tensorboard data will be written every ___ epochs
 
 # +++ optimizer prefrences
